better alloc print

--- a/AllocationView.html
+++ b/AllocationView.html
@@ -5,11 +5,18 @@
     <meta charset="utf-8">
 
     <style>
-        * { padding:0; margin:0; border:0; font-size: 12px; font-family: monospace; }
-        div { word-break: break-all; width: 400px; height: 100%; font-size: 24px; border: 1px solid gray; }
+        *       { padding:0; margin:0; border:0; font-size: 24px; font-family: monospace; }
+        div     { word-break: break-all; width: 400px; height: 100%; border: 1px solid gray; }
+        a:hover { cursor: pointer; }
     </style>
 </head>
 <body>
 
 <div>
-&#9639;&#9639;&#9639;&#9634;&#9634;&#9639;</div></body>
+<a title='unused
+'>&#9634;</a><br><a title='unused
+'>&#9634;</a><br><a title='struct mini::box::Array<struct mini::res::Texture<32,32,4>,2,1,unsigned int,void>
+'>&#9639;</a><a title='unused
+'>&#9634;</a><a title='unused
+'>&#9634;</a><br><a title='struct mini::box::Array<struct mini::res::Texture<1024,1024,4>,2,1,unsigned int,void>
+'>&#9639;</a></div></body>
